Fixed nav spacings. Added hero pic

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,13 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
-/* 
-RESET 
-*/
+/*! RESET */
 
-* {
+*,
+*::before,
+*::after {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+}
+
+html {
+	font-size: 16px;
 }
 
 img {
@@ -21,15 +25,13 @@ button {
 	font: inherit;
 }
 
-/* 
-VARIABLES 
-*/
+/*! || VARIABLES */
 
 :root {
-	/* FONTS */
+	/*! FONTS */
 	--FF: "Roboto", sans-serif;
 
-	/* COLORS */
+	/*! COLORS */
 	--BG-B: #202a25;
 	--BG-BLUE: #7eb2dd;
 	--BG-R: #f93943;
@@ -43,9 +45,7 @@ VARIABLES
 	--TXT-W: #ffefd5;
 }
 
-/* 
-GENERAL 
-*/
+/*! || GENERAL */
 
 html {
 	scroll-behavior: smooth;
@@ -56,58 +56,50 @@ html {
 	background-color: var(--BG-W);
 }
 
-/* 
-HEADER 
-*/
+/*! || HEADER */
 
 .header {
 	position: sticky;
 	top: 0;
 	background-color: var(--BG-B);
 	display: flex;
-	flex-direction: row;
 	justify-content: space-between;
+	align-items: center;
+	height: 4rem;
 }
 
 .header__logo {
 	color: var(--TXT-R);
-	margin: auto 1rem;
+	margin-left: 3rem;
 	font-size: 1.5rem;
-	/* line-height: 3.5rem; */
 }
 
-/* 
-NAV 
-*/
+/*! || NAV */
 
 .nav__ul {
+	display: inline-flex;
 	list-style-type: none;
 	font-size: 1.25rem;
-	/* margin-right: 1rem; */
 }
 
 .nav__li {
-	display: inline-block;
-	margin-left: -5px;
+	height: 4rem;
+	padding: 1.25rem 1.5rem;
 	/* background-color: var(--BG-R); */
 }
 
 ul li:hover,
 ul li:focus {
 	background-color: var(--TXT-HOVER);
-	transition: background-color 0.25s ease;
+	transition: background-color 0.25s ease-in-out;
 }
 
 .nav__a {
-	display: inline-block;
 	color: var(--TXT-W);
 	text-decoration: none;
-	padding: 1rem;
 }
 
-/* 
-LANDING 
-*/
+/*! || LANDING */
 
 .landing {
 	display: flex;
@@ -125,9 +117,7 @@ LANDING
 	width: 40%;
 } */
 
-/* 
-FORM 
-*/
+/*! || FORM */
 
 .form-container {
 	box-shadow: 0.1rem 0.1rem 0.5rem 0.25rem var(--BOX-SHADOW);
@@ -181,9 +171,7 @@ FORM
 	transition: background-color 0.25s ease;
 }
 
-/* 
-FOOTER 
-*/
+/*! || FOOTER */
 
 .footer {
 	background-color: var(--BG-B);
